# screen-translator

./: .gitignore  README.md  install-arch-desktop.sh  install.sh  main.py  pyproject.toml  requirements.txt  screen-translator.desktop  setup.py  test_main.py
